public/css/actionite.css
html,body{
    height: 100%
}

.campaign-abstract {
    margin-left: 5px;
}

.campaign-box {
    margin-bottom: 40px;
}

.welcome {
  padding-bottom: 0;
  padding-top: 50px;
}

.welcome-banner {
  padding-top: 30px;
}

#photo_banner {
  margin-top: 3em;
}

.navbar-spacer {
    padding-top: 4em;
}

#navbar-border {
    border-width: 0;
}

.jumbotron-title {
  margin-top:80px;
  text-align: center;
}

#slick-container {
  width:85%;
  margin-left: auto;
  margin-right: auto;
}

#petition_body, #donation_body {
  text-align: justify;
  clear:top;
}

.donation-next-btn-header,
.donation-submit-header {
  font-family: Open Sans !important;
}

.donation-next-btn {
  background-color: #00ABBD !important;
}

.donation-header {
  color: #00ABBD !important;
}

.donation-progress-banner {
  background-color: #DD4814 !important;
}

#donation-banner {
  background-image: url("../img/donations/rainforest.jpg");
  color: white;
}

.text-body {
  display: block;
  margin-top, margin-bottom: 50px;
}

#donation-container {
  display: block;
  margin-bottom: 20px;
}

#error {
   margin-top: 200px;
   background-color: white;
}

#error * {
  float: none;
  display: table-cell;
  vertical-align: bottom;
}

#validation-error {
  font-size: 0.9em;
  color: red;
  font-style: italic;
}

#logo-navbar {
  margin: 0 20px 0 0;
  padding: 3px 12px;
  background-color: white;
}

.btn-sharp {
  border-radius: 0;
}

.full-width {
  width: 100%;
}

/*CSS FOR STICKY FOOTER*/

#wrap {
  min-height: 100%;
}

#main {
  overflow:auto;
  padding-bottom: 250px;
  }  /* must be same height as the footer */

#footer {
  position: relative;
  margin-top: -150px; /* negative value of footer height */
  height: 150px;
  clear:both;
  border-top: 2px dashed #AE3910;
} 

#footer .row {
  margin-top:40px;
}

/*Opera Fix*/
body:before {
  content:"";
  height:100%;
  float:left;
  width:0;
  margin-top:-32767px;/
}

